tests/source/floats/valid/libraries/libraries_float_parameters/float_parameters_client.c
/* This test case is identical to chapter13/valid/function_calls/float_parameters.c
 * but split across two files */
int check_arguments(float a, float b, float c, float d, float e, float f, float g, float h);

int main(void) {
    return check_arguments(1.0, 2.0, 3.0, 4.0, -1.0, -2.0, -3.0, -4.0);
}
