tests/source/floats/invalid/semantic/mod_float_2.c
int main(void) {
    /* You can't apply the modulo operator to a float */
    float e = 3.0 % 5;
    return 0;
}
